--- a/login/index.css
+++ b/login/index.css
@@ -85,7 +85,7 @@ a{
 }
 @media only screen  and (max-width:1024px) and (min-width:280px) {
     body{
-        height: 42rem;
+        height: 46rem;
     }
     .formBox{
         width: 18rem;
@@ -98,5 +98,8 @@ a{
     }
     .text h3{
         font-size: 1.2rem;
+    }
+    a{
+        font-size: .8rem;
     }
 }
