--- a/login/index.css
+++ b/login/index.css
@@ -8,7 +8,7 @@ body{
     background-image: url(../images/piggyvestLoginBg.png);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 39.05rem;
+    height: max-content;
     font-family: 'Open Sans', sans-serif;
 }
 .ctn{
