--- a/homepage/index.css
+++ b/homepage/index.css
@@ -4,8 +4,9 @@
     box-sizing: border-box;
 }
 .ctn{
-    margin-left: 5rem;
-    margin-right: 5rem;
+    margin-left: 4rem;
+    margin-right: 4rem;
+    margin-top: 2rem;
 }
 header{
     display: flex;
@@ -33,13 +34,13 @@ nav a{
     margin-left: 16rem;
 }
 .button1 button{
-    padding: 1.1rem 1.3rem;
+    padding: 1.1rem 1rem;
     border-radius: .8rem;
     border: .1rem solid #bdbbbb;
     font-weight: bold;
 }
 .button2 button{
-    padding: 1.1rem 1.3rem;
+    padding: 1.1rem 1rem;
     border-radius: .8rem;
     background-color:#0c1825;
     color: white;
@@ -394,32 +395,70 @@ nav a{
     transform-origin: left;
     transform: scaleX(1);
 }
-#box{
+/* #box{
     display: flex;
-    margin-bottom: 7rem;
-    margin-top: 10rem;
+   
+    height: 100%;
     width: 100%;
+}
+
+.box-a{
+    background: #0d60d8;
+    padding-bottom: 5.7rem;
+    height: 100%;
+    width: 50%;
+}
+.box-b{
+    width: 50%;
+    height: 100%;
+}
+.box-b img{
+    width: 100%;
+    height: 100%;
+}
+/*  */
+.box-a h1, .box-a p, .box-a a{
+    margin-left: 6rem;
+    margin-right: 16rem;
 }
 .box-a h1{
     color: white;
     font-size: 3.3rem;
     margin-top: 5rem;
 }
-.box-a{
-    background: #0d60d8;
-    height: 36.85rem;
-    width: 50%;
+#box{
+    display: flex;
+     margin-bottom: 7rem;
+    margin-top: 10rem;
 }
-.box-b{
-    width: 50%;
+.box-a a i{
+    background: white;
+    color: #0d60d8;
+    border-radius: 2rem;
+    padding: .5rem;
+    margin-right: 1.2rem;
 }
-.box-b img{
-    width: 100%;
+.box-a a{
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
 }
 .box-a a{
     font-weight: bold;
     text-decoration: none;
     position: relative;
+}
+.box-a{
+    width: 60%;
+    background-color: #0d60d8;
+    height: 31.5rem;
+}
+.box-a p{
+    color: white;
+    font-size: 1.1rem;
+    width: 420px;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
 }
 .box-a a::before{
     content: '';
@@ -438,28 +477,8 @@ nav a{
     transform-origin: left;
     transform: scaleX(1);
 }
-.box-a p{
-    color: white;
-    font-size: 1.1rem;
-    width: 420px;
-    margin-top: 2rem;
-    margin-bottom: 4rem;
-}
-.box-a a i{
-    background: white;
-    color: #0d60d8;
-    border-radius: 2rem;
-    padding: .5rem;
-    margin-right: 1.2rem;
-}
-.box-a a{
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-.box-a h1, .box-a p, .box-a a{
-    margin-left: 6rem;
-    margin-right: 16rem;
+.box-b img{
+    height: 31.5rem;
 }
 #comments{
     display: flex;
